--- a/ExplorerTags/ExplorerTags.csproj
+++ b/ExplorerTags/ExplorerTags.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     <PackageReference Include="System.Drawing.Common" Version="10.0.0" />
     <PackageReference Include="WindowsAPICodePack" Version="8.0.12" />
   </ItemGroup>
